--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jotai": "^2.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sweetalert2": "^11.25.1",
     "zmp-sdk": "^2.47.2",
     "zmp-ui": "^1.11.12-7"
   },
